Version 8.1903.0 (aka 2019.03) 2019-03-05
- improg: create input module to use external program as input datas
- imtuxedoulog: create input module to consume Tuxedo ULOG files
- omhttp: rewritten with large feature enhancements
  Many thanks to Gabriel Intrator for this work. Gabriel also has adopted the
  module and plans to support it in the future.
- TLS subsystem: add support for certless communication
  both openssl and GnuTLS drivers have been updated to support certless
  communications. In this case e.g. Diffie-Helman is used.
  NOTE: this is an insecure mode, as it does NOT guard against
  man-in-the-middle attacks. We implemented it because of the large demand,
  not because we think it makes sense to use this mode. We strongly recommend
  against it.
  closes https://github.com/rsyslog/rsyslog/issues/1068
- imrelp/omrelp: add capability to specify tlslib for librelp
  closes https://github.com/rsyslog/rsyslog/issues/3451
- build system: introduce a better way to handle compiler pragmas
  we now use macros and _Pragma(). This requires less code lines and is more
  portable.
- omkafka: add support for dynamic keys
  A new configuration property "dynaKey" is added that, when "on", changes the
  value of property "key" to a template names instead of a constant value.
  This is similar in approach to the DynaTopic implementation.
  Thanks to Ludo Brands for the patch.
- AIX port: add AIX linking extensions on many plugins and contibutions to
  allow building them on this os.
- template: add Time-Related System Property $wday which is the day of week
  This allow to get a week based rotation of log as AIX does.
- ksi subsystem: add high avalability mode
  Note: ksi subsystem now REQUIRES libksi 3.19.0 or above
  Thanks to Allan Park for the patch.
  closes https://github.com/rsyslog/rsyslog/issues/3338
- imfile bugfix: file reader could get stuck
  State file handling was invalid. When a file was moved and re-created