@@ -1,0 +1,8 @@
+pkglib_LTLIBRARIES = pmdb2diag.la
+
+pmdb2diag_la_SOURCES = pmdb2diag.c
+pmdb2diag_la_CPPFLAGS =  $(RSRT_CFLAGS) $(PTHREADS_CFLAGS) -I ../../tools
+pmdb2diag_la_LDFLAGS = -module -avoid-version
+pmdb2diag_la_LIBADD = 
+
+EXTRA_DIST = 
